--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
             </div>
             <div class="offer">
                 <h1 class="offer__title">
-
+                    John Doe
                 </h1>
+                <p>
+                    #UserExperience #Music #Creative
+                </p>
             </div>
         </div>
     </header>
