--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>John Doe</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,900|Raleway:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
@@ -33,7 +33,7 @@
     <section class="about">
         <div class="container">
             <div class="about__man">
-                <img src="/img/man.jpg" alt="Man" class="about__man-pic">
+                <img src="/img/man.png" alt="Man" class="about__man-pic">
             </div>
             <div class="about__text">
                 <h3 class="about__text-title">Hi, i’m John Doe, Experience Crafter from Canada.</h3>
@@ -47,8 +47,8 @@
             </div>
         </div>
     </section>
-
-    <section class="process">
+        
+        <section class="process">
         <div class="container">
             <div class="process__heading">
                 <h2 class="process__title">My Working Process</h2>
@@ -83,7 +83,10 @@
         </div>
     </section>
 
-    <section class="portfolio">
+    <!-- 
+                !!!!!!!!!ИСПРАВИТЬ!!!!!!!!
+
+        <section class="portfolio">
         <div class="container">
             <div class="portfolio__heading">
                 <h4 class="portfolio__title">My Latest Works
@@ -108,7 +111,7 @@
                 </li>
             </ul>
         </div>
-    </section>
+    </section> -->
 
     <footer class="footer">
         <div class="container">
