--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container">
             <div class="process__heading">
                 <h2 class="process__title">My Working Process</h2>
-                <p class="process__text">Hi, i’m Paul Lapkin, Experience Crafter from Canada.</p>
+                <p class="process__text">Hi, i’m John Doe, Experience Crafter from Canada.</p>
             </div>
             <ul class="process__list-steps">
                 <li class="list-steps__item">
